- Corrected Rwanda/Tanzania not having Commonwealth of Nations Ideas
- Fixed missing Malawi party
- Fix bailout event not updating interest rates
- Some minor fixes to 3D models
- Fix the Feedback Exploit to Tax Cost
- Fix names of Guatemala's leaders not showing up
- Fix Macedonia not having a core on its Eastern state
- Fix being unable to take the highest level corruption

Decisions
- Fixed being able to sue Microsoft twice as USA
- Created cheat decision to max internal faction opinion
- Improved AI for Nigerian decisions
- Finalized Vehicle Equipment Purchasing
- Added additional checks to decisions

Economy
- Increased resources for all nations across the globe: Particular focus on global exporters
- Economic decision to drop money on to spur growth
- Leasing decisions to recieve mils and civs when needed
- Rentier state and other resource driven economies now have more variability in income depending on exports
- Various techs now impact expenditures
- Additional factories for South America, Asia, and Africa. Particular focus around the regional powers.

Events
- Fixed Turkey Kurdish politics event spam

Focus Trees
- Made Nigerian tree compatible with Counter-Terror systems
- Fix Nigerian tree not properly deleting christian militias
- Moved Brazilian focuses so they no longer overlap
- United States of Europe Focus Tree

Gameplay/Mechanics
- Annexing Puppets Yields Cores on their core territory (prevents a uber aggressive nation conquering other countries and then annexing them to gain all cores on all their lands)
- Nukes are toggable now via the Game Rule
- Generals now can take 24 units rather then 15
- Max experience has been buffed to 1000 from 500
- Nerfed Biofuel refineries to cost 25000 from 45000
- European Council (Reworked Voting System, Voting Prediction)
- European Parliament
- European Union Budget
- Breach of European values
- Reworked EU Tutorial