@@ -668,9 +668,9 @@ reduce_biggest_influencer_by_2_percent = {
 	recalculate_influence = yes
 }
 reduce_biggest_influencer_by_3_percent = {
-	custom_effect_tooltip = attack_first_influence_4_amount_TT
+	custom_effect_tooltip = attack_first_influence_3_amount_TT
 	set_temp_variable = { influence_reduce = influence_total }
-	multiply_temp_variable = { influence_reduce = 0.04 } #Reduce by 4%
+	multiply_temp_variable = { influence_reduce = 0.03 } #Reduce by 4%
 	subtract_from_variable = { influence_array_val^0 = influence_reduce }
 	subtract_from_variable = { influence_array_val^0 = 10 } #Hardcoded 10 point reduction
 	#Safeguard: #Removes any influencer if below 1%
@@ -770,9 +770,9 @@ reduce_second_influencer_by_2_percent = {
 	recalculate_influence = yes
 }
 reduce_second_influencer_by_3_percent = {
-	custom_effect_tooltip = attack_second_influence_4_amount_TT
+	custom_effect_tooltip = attack_second_influence_3_amount_TT
 	set_temp_variable = { influence_reduce = influence_total }
-	multiply_temp_variable = { influence_reduce = 0.04 } #Reduce by 4%
+	multiply_temp_variable = { influence_reduce = 0.03 } #Reduce by 4%
 	subtract_from_variable = { influence_array_val^1 = influence_reduce }
 	subtract_from_variable = { influence_array_val^1 = 10 } #Hardcoded 10 point reduction
 	#Safeguard: #Removes any influencer if below 1%
@@ -872,9 +872,9 @@ reduce_third_influencer_by_2_percent = {
 	recalculate_influence = yes
 }
 reduce_third_influencer_by_3_percent = {
-	custom_effect_tooltip = attack_third_influence_4_amount_TT
+	custom_effect_tooltip = attack_third_influence_3_amount_TT
 	set_temp_variable = { influence_reduce = influence_total }
-	multiply_temp_variable = { influence_reduce = 0.04 } #Reduce by 4%
+	multiply_temp_variable = { influence_reduce = 0.03 } #Reduce by 4%
 	subtract_from_variable = { influence_array_val^2 = influence_reduce }
 	subtract_from_variable = { influence_array_val^2 = 10 } #Hardcoded 10 point reduction
 	#Safeguard: #Removes any influencer if below 1%
