@@ -151,9 +151,39 @@
  decrease_domestic_influence_8_percent_tt: "Decreases Domestic Independence by §R8%§!\n"
  decrease_domestic_influence_9_percent_tt: "Decreases Domestic Independence by §R9%§!\n"
  decrease_domestic_influence_10_percent_tt: "Decreases Domestic Independence by §R10%§!\n"
+ #Biggest Influencers
+ increase_biggest_influencer_by_1_percent_tt: "Increases §Y[?var:FROM.influence_array^0.GetNameWithFlag]§! influence by §G1%§!\n"
+ increase_biggest_influencer_by_2_percent_tt: "Increases §Y[?var:FROM.influence_array^0.GetNameWithFlag]§! influence by §G2%§!\n"
+ increase_biggest_influencer_by_3_percent_tt: "Increases §Y[?var:FROM.influence_array^0.GetNameWithFlag]§! influence by §G3%§!\n"
+ increase_biggest_influencer_by_4_percent_tt: "Increases §Y[?var:FROM.influence_array^0.GetNameWithFlag]§! influence by §G4%§!\n"
+ increase_biggest_influencer_by_5_percent_tt: "Increases §Y[?var:FROM.influence_array^0.GetNameWithFlag]§! influence by §G5%§!\n"
+ attack_first_influence_1_amount_TT: "Reduces §Y[?var:FROM.influence_array^0.GetNameWithFlag]§! influence by §G1%§!\n"
+ attack_first_influence_2_amount_TT: "Reduces §Y[?var:FROM.influence_array^0.GetNameWithFlag]§! influence by §G2%§!\n"
+ attack_first_influence_3_amount_TT: "Reduces §Y[?var:FROM.influence_array^0.GetNameWithFlag]§! influence by §G3%§!\n"
  attack_first_influence_4_amount_TT: "Reduces §Y[?var:FROM.influence_array^0.GetNameWithFlag]§! influence by §G4%§!\n"
- attack_second_influence_4_amount_TT: "Reduces [?var:FROM.influence_array^1.GetNameWithFlag] by §G4%§!\n"
- attack_third_influence_4_amount_TT: "Reduces [?var:FROM.influence_array^2.GetNameWithFlag] by §G4%§!\n"
+ attack_first_influence_5_amount_TT: "Reduces §Y[?var:FROM.influence_array^0.GetNameWithFlag]§! influence by §G5%§!\n"
+ #Second Largest Influencer
+ increase_second_influencer_by_1_percent_tt: "Increases §Y[?var:FROM.influence_array^1.GetNameWithFlag]§! influence by §G1%§!\n"
+ increase_second_influencer_by_2_percent_tt: "Increases §Y[?var:FROM.influence_array^1.GetNameWithFlag]§! influence by §G2%§!\n"
+ increase_second_influencer_by_3_percent_tt: "Increases §Y[?var:FROM.influence_array^1.GetNameWithFlag]§! influence by §G3%§!\n"
+ increase_second_influencer_by_4_percent_tt: "Increases §Y[?var:FROM.influence_array^1.GetNameWithFlag]§! influence by §G4%§!\n"
+ increase_second_influencer_by_5_percent_tt: "Increases §Y[?var:FROM.influence_array^1.GetNameWithFlag]§! influence by §G5%§!\n"
+ attack_second_influence_1_amount_TT: "Reduces §Y[?var:FROM.influence_array^1.GetNameWithFlag]§! influence by §G1%§!\n"
+ attack_second_influence_2_amount_TT: "Reduces §Y[?var:FROM.influence_array^1.GetNameWithFlag]§! influence by §G2%§!\n"
+ attack_second_influence_3_amount_TT: "Reduces §Y[?var:FROM.influence_array^1.GetNameWithFlag]§! influence by §G3%§!\n"
+ attack_second_influence_4_amount_TT: "Reduces §Y[?var:FROM.influence_array^1.GetNameWithFlag]§! influence by §G4%§!\n"
+ attack_second_influence_5_amount_TT: "Reduces §Y[?var:FROM.influence_array^1.GetNameWithFlag]§! influence by §G5%§!\n"
+ #Third Largest
+ increase_third_influencer_by_1_percent_tt: "Increases §Y[?var:FROM.influence_array^2.GetNameWithFlag]§! influence by §G1%§!\n"
+ increase_third_influencer_by_2_percent_tt: "Increases §Y[?var:FROM.influence_array^2.GetNameWithFlag]§! influence by §G2%§!\n"
+ increase_third_influencer_by_3_percent_tt: "Increases §Y[?var:FROM.influence_array^2.GetNameWithFlag]§! influence by §G3%§!\n"
+ increase_third_influencer_by_4_percent_tt: "Increases §Y[?var:FROM.influence_array^2.GetNameWithFlag]§! influence by §G4%§!\n"
+ increase_third_influencer_by_5_percent_tt: "Increases §Y[?var:FROM.influence_array^2.GetNameWithFlag]§! influence by §G5%§!\n"
+ attack_third_influence_1_amount_TT: "Reduces §Y[?var:FROM.influence_array^2.GetNameWithFlag]§! influence by §G1%§!\n"
+ attack_third_influence_2_amount_TT: "Reduces §Y[?var:FROM.influence_array^2.GetNameWithFlag]§! influence by §G2%§!\n"
+ attack_third_influence_3_amount_TT: "Reduces §Y[?var:FROM.influence_array^2.GetNameWithFlag]§! influence by §G3%§!\n"
+ attack_third_influence_4_amount_TT: "Reduces §Y[?var:FROM.influence_array^2.GetNameWithFlag]§! influence by §G4%§!\n"
+ attack_third_influence_5_amount_TT: "Reduces §Y[?var:FROM.influence_array^2.GetNameWithFlag]§! influence by §G5%§!\n"
  increase_domestic_influence_amount_50_TT: "Will increase independence from foreign influence: §G+50§!\n"
  target_hostile_influence_TT: "[From.GetNameWithFlag]: influence in [Root.GetNameWithFlag] §R-15§!\n"
  show_multiplier_tt: "[influence_multiplier_modifier]"
