@@ -17,6 +17,8 @@ Bugfixes
 - Fix names of Guatemala's leaders not showing up
 - Fix Macedonia not having a core on its Eastern state
 - Fix being unable to take the highest level corruption
+- Fixed some general influence bugs
+- Fixed several backend UI bugs
 
 Decisions
 - Fixed being able to sue Microsoft twice as USA
@@ -24,6 +26,7 @@ Decisions
 - Improved AI for Nigerian decisions
 - Finalized Vehicle Equipment Purchasing
 - Added additional checks to decisions
+- New Influence Decisions to combat 1-3 influencers as well as improvements to influence decision AI
 
 Economy
 - Increased resources for all nations across the globe: Particular focus on global exporters
@@ -41,9 +44,11 @@ Focus Trees
 - Fix Nigerian tree not properly deleting christian militias
 - Moved Brazilian focuses so they no longer overlap
 - United States of Europe Focus Tree
+- Reworked Ethiopian Industrial tree
 
 Gameplay/Mechanics
 - Annexing Puppets Yields Cores on their core territory (prevents a uber aggressive nation conquering other countries and then annexing them to gain all cores on all their lands)
+- Annexing Puppets forces you to inherit their treasury, debt and international investments
 - Nukes are toggable now via the Game Rule
 - Generals now can take 24 units rather then 15
 - Max experience has been buffed to 1000 from 500
@@ -69,6 +74,7 @@ Localization
 - Fixed typos in Game Rules
 - Various focus tree localization improvements
 - Updated Land Tech Doctrine Localization
+- Updated localization for influence
 
 Map
 - New urban tiles and improvements to maps
